# pd_main_bot_service

./: .env.template  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  update.sh
.github/workflows/: deploy_dev.yml  deploy_prod.yml
tgbot/: alembic.ini  bot.py  config.py  main.py
tgbot/alembic/: env.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/menu/: __init__.py  error.py
tgbot/dialogs/menu/main/: callbacks.py  getters.py  keyboards.py  states.py  windows.py
tgbot/dialogs/menu/profile/: getters.py  keyboards.py  states.py  windows.py
tgbot/dialogs/menu/technical_support/: callbacks.py  getters.py  states.py  windows.py
tgbot/exceptions/: __init__.py  main_backend.py
tgbot/filters/: admin.py  deep_links.py
tgbot/infrastructure/: http_client.py
tgbot/middleware/: __init__.py  logging.py  service.py
tgbot/models/: base.py  bet.py  notification.py  pduser.py  support_chat.py
tgbot/routers/: __init__.py
tgbot/routers/commands/: base_commands.py
tgbot/routers/messages/: base_messages.py
tgbot/schemas/: bets.py  notifications.py  users.py
tgbot/service/: bot_message.py  notifications.py  users.py
tgbot/storage/postgres/: db_helper.py
tgbot/storage/postgres/dao/: notifications.py  orders.py  users.py
tgbot/storage/redis/: redis_helper.py
tgbot/utils/: notifications.py  shared.py  text.py
tgbot/utils/generator_images/: generator.py  template.py
tgbot/utils/generator_images/template/: shared_order.html  shared_order_img_base64
tgbot/utils/render_img/: draw.py
