[tool.poetry]
name = "pumpdump_main_bot"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7"
aiogram-dialog = "^2.1.0"
pydantic-settings = "^2.3.4"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
redis = {extras = ["hiredis"], version = "^5.0.7"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
#dexlotdb = {git = "https://github.com/taiga-labs/dexlotdb.git"}
aio-pika = "^9.4.3"
pillow = "^11.1.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
